--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="icon"
-    href="https://res.cloudinary.com/boxity-id/image/upload/w_1000/q_auto:best/f_auto/v1678791753/asset_boxity/logo/icon-web_qusdsv.png"
-    type="image/png"
-  />
-    <title>ERP - Boxity</title>
+      rel="icon"
+      href="https://res.cloudinary.com/boxity-id/image/upload/w_1000/q_auto:best/f_auto/v1678791753/asset_boxity/logo/icon-web_qusdsv.png"
+      type="image/png"
+    />
+    <title>Livestock weighing - Boxity</title>
     <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet"
-  />
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <style>
     * {
@@ -21,8 +21,19 @@
     .transition-max-height {
       transition: max-height 0.5s ease-in-out;
     }
+    .swal2-title,
+    #swal2-title {
+      font-size: 0.8rem !important;
+      font-weight: 400 !important;
+    }
+    .capitalize {
+      text-transform: capitalize;
+    }
+    .uppercase {
+      text-transform: uppercase !important;
+    }
   </style>
-  <body style="background-color: #F9FAFB;">
+  <body style="background-color: #f9fafb">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
