fix: logo and a lil bit of changes

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
-      href="https://res.cloudinary.com/boxity-id/image/upload/w_1000/q_auto:best/f_auto/v1678791753/asset_boxity/logo/icon-web_qusdsv.png"
+      href="https://res.cloudinary.com/boxity-id/image/upload/v1713274875/ptDHKManufacturing/icon_taauqv.png"
       type="image/png"
     />
-    <title>Livestock weighing - Boxity</title>
+    <title>Livestock weighing - PT DHK Manufacturing</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
